fix: registering flutter SDK as Dart SDK prevents LS from starting
When registering the flutter SDK dir as Dart SDK the language server
fails to start on Linux/MacOS